test_scores/negative_dimers/features/P02649.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/P02649.pkl.xz